--- a/view/onproduct.html
+++ b/view/onproduct.html
@@ -5,6 +5,7 @@
     <meta name="google" content="notranslate">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <meta name="google-site-verification" content="_hVl8P4Hfu23zX6_7tfGpQ8X4AB9fPOGvVd9fqdXhSk" />
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="responsive.css">
     <link rel="icon" href="logo.png" type="image/x-icon">
